# cooledit

./: .gitignore  0install-quick  AUTHORS  COPYING  COPYRIGHT  COPYRIGHT.bsd  INSTALL  INSTALL.freebsd  INSTALL.solaris  INSTALL.ubuntu  Makefile.am  Makefile.in  NEWS  README.md  TODO  VERSION  aclocal.m4  auto-tools.sh  build-remotefs.sh  config-mswin.h  config.h.in  configure  configure.ac  cooledit.menu  cooledit.spec  cooledit_16x16.xpm  cooledit_32x32.xpm  cooledit_48x48.xpm  global.h  inspect.h  ptytest.c  remotefs.rc  reverse-unicode.py  staged.patch
bitmap/: cross.bitmap  exclam.bitmap  refresh.bitmap  save.bitmap  switch.bitmap  switchoff.bitmap  switchon.bitmap  tick.bitmap  toolbar.bitmap
cursor/: README.dnd  hand.xbm  hand_mask.xbm  hour.xbm  hour_mask.xbm  left_ptr.xbm  left_ptr_mask.xbm
editor/: Makefile.am  Makefile.in  _coolpython.c  complete.c  cooledit-gdb  cooledit.c  cooleditmenus.c  coolman.c  coolproject  coolpython.c  coolterm  copyright.h  debug.c  debug.h  editoptions.c  editoptions.h  find.c  find.h  igloo.h  mail.c  mancmd.c  manpage.c  manpage.h  options.c  percentsubs.c  postscript.c  postscript.h  print.c  print.h  rxvt.c  rxvt.h  shell.c  shell.h  smalledit.c  trivoptions.c
editor/swig/: Makefile  cooledit.i
lib/: Makefile.am  Makefile.in  c_utils.py  global.py  sh_utils.py
man/: Makefile.am  Makefile.in  cooledit.1  coolterm.1  remotefs.1  smalledit.1
notosans/: Makefile.am  Makefile.in  sort.py
pixmap/: Makefile.am  Makefile.in
remotefs/: Makefile.am  Makefile.in
rxvt/: Makefile.am  Makefile.in  README.rxvt  _rxvtlib.h  grkelot.c  grkelot.h  main.c  rxvtexport.h  rxvtlib.c  rxvtlib.h  rxvtlib_command.c  rxvtlib_graphics.c  rxvtlib_logging.c  rxvtlib_main.c  rxvtlib_menubar.c  rxvtlib_misc.c  rxvtlib_netdisp.c  rxvtlib_rmemset.c  rxvtlib_screen.c  rxvtlib_scrollbar.c  rxvtlib_xdefaults.c  rxvtlib_xpm.c  rxvtlibproto.h  rxvtlibtypedef.h
syntax/: Makefile.am  Makefile.in  bapc.syntax  c.syntax  cdoc.syntax  css.syntax  cuda.syntax  cxx.syntax  dot.syntax  fortran.syntax  glsl.syntax  haskell.syntax  html.syntax  jasm.syntax  java.syntax  js.syntax  latex.syntax  lkr.syntax  lsm4.syntax  lua.syntax  ml.syntax  nemerle.syntax  opencl.syntax  osl.syntax  pascal.syntax  perl.syntax  prolog.syntax  python.syntax  scm.syntax  sh.syntax  spice.syntax  sql.syntax  swig.syntax  unknown.syntax  xml.syntax  yxx.syntax
widget/: 3dinit.c  3dinit.h  3dkit.c  3dkit.h  3dtext.c  3dtext.h  ClientWin.c  Makefile.am  Makefile.in  aafont.c  aafont.h  aes.c  aes.h  aes_const.h  app_glob.c  bitmapbutton.c  bookmark.c  childhandler.c  childhandler.h  cmdlineopt.c  cmdlineopt.h  compatable.c  conv.c  coollocal.h  coolnext.c  coolwidget.c  coolwidget.h  cterminal.c  cterminal.h  cursor.c  dialog.c  dirtools.c  dirtools.h  disable.c  dnd.c  drawings.c  drawings.h  edit.c  edit.h  edit_key_translator.c  (+111 more)
widget/syntax/: Makefile  Syntax.in  make-syntax.py  rgb2.txt  syntax-unit.c  unit.syntax  uxit.syntax  uyit.syntax
