
syntaxdir = $(datadir)/cooledit/fonts

syntax_DATA = 8x13B-ISO8859-1.pcf.gz 8x13B.pcf.gz Makefile.am NotoColorEmoji.ttf NotoEmoji-Regular.ttf NotoKufiArabic-Regular.ttf NotoMono-Regular.ttf \
	NotoNaskhArabicUI-Regular.ttf NotoNastaliqUrdu-Regular.ttf NotoSansAdlam-Regular.ttf NotoSansAdlamUnjoined-Regular.ttf \
	NotoSansAnatolianHieroglyphs-Regular.ttf NotoSansArmenian-Regular.ttf NotoSansAvestan-Regular.ttf NotoSansBalinese-Regular.ttf \
	NotoSansBamum-Regular.ttf NotoSansBatak-Regular.ttf NotoSansBengaliUI-Regular.ttf NotoSansBrahmi-Regular.ttf NotoSansBuginese-Regular.ttf \
	NotoSansBuhid-Regular.ttf NotoSansCanadianAboriginal-Regular.ttf NotoSansCarian-Regular.ttf NotoSansChakma-Regular.ttf \
	NotoSansCham-Regular.ttf NotoSansCherokee-Regular.ttf NotoSansCoptic-Regular.ttf NotoSansCuneiform-Regular.ttf NotoSansCypriot-Regular.ttf \
	NotoSansDeseret-Regular.ttf NotoSansDevanagariUI-Regular.ttf NotoSansEgyptianHieroglyphs-Regular.ttf NotoSansEthiopic-Regular.ttf \
	NotoSansGeorgian-Regular.ttf NotoSansGlagolitic-Regular.ttf NotoSansGothic-Regular.ttf NotoSansGujaratiUI-Regular.ttf \
	NotoSansGurmukhiUI-Regular.ttf NotoSansHanunoo-Regular.ttf NotoSansHebrew-Regular.ttf NotoSansImperialAramaic-Regular.ttf \
	NotoSansInscriptionalPahlavi-Regular.ttf NotoSansInscriptionalParthian-Regular.ttf NotoSansJavanese-Regular.ttf NotoSansKaithi-Regular.ttf \
	NotoSansKannadaUI-Regular.ttf NotoSansKayahLi-Regular.ttf NotoSansKharoshthi-Regular.ttf NotoSansKhmerUI-Regular.ttf \
	NotoSansLaoUI-Regular.ttf NotoSansLepcha-Regular.ttf NotoSansLimbu-Regular.ttf NotoSansLinearB-Regular.ttf NotoSansLisu-Regular.ttf \
	NotoSansLycian-Regular.ttf NotoSansLydian-Regular.ttf NotoSansMalayalamUI-Regular.ttf NotoSansMandaic-Regular.ttf \
	NotoSansMeeteiMayek-Regular.ttf NotoSansMongolian-Regular.ttf NotoSansMono-Bold.ttf NotoSansMonoCJKjp-Regular.otf \
	NotoSansMonoCJKkr-Regular.otf NotoSansMonoCJKsc-Regular.otf NotoSansMonoCJKtc-Regular.otf NotoSansMyanmarUI-Regular.ttf \
	NotoSansNewTaiLue-Regular.ttf NotoSansNKo-Regular.ttf NotoSansOgham-Regular.ttf NotoSansOlChiki-Regular.ttf NotoSansOldItalic-Regular.ttf \
	NotoSansOldPersian-Regular.ttf NotoSansOldSouthArabian-Regular.ttf NotoSansOldTurkic-Regular.ttf NotoSansOriyaUI-Regular.ttf \
	NotoSansOsage-Regular.ttf NotoSansOsmanya-Regular.ttf NotoSansPhagsPa-Regular.ttf NotoSansPhoenician-Regular.ttf NotoSans-Regular.ttf \
	NotoSansRejang-Regular.ttf NotoSansRunic-Regular.ttf NotoSansSamaritan-Regular.ttf NotoSansSaurashtra-Regular.ttf \
	NotoSansShavian-Regular.ttf NotoSansSinhalaUI-Regular.ttf NotoSansSundanese-Regular.ttf NotoSansSylotiNagri-Regular.ttf \
	NotoSansSymbols2-Regular.ttf NotoSansSymbols-Regular.ttf NotoSansSyriacEastern-Regular.ttf NotoSansSyriacEstrangela-Regular.ttf \
	NotoSansSyriacWestern-Regular.ttf NotoSansTagalog-Regular.ttf NotoSansTagbanwa-Regular.ttf NotoSansTaiLe-Regular.ttf \
	NotoSansTaiTham-Regular.ttf NotoSansTaiViet-Regular.ttf NotoSansTamilUI-Regular.ttf NotoSansTeluguUI-Regular.ttf NotoSansThaana-Regular.ttf \
	NotoSansThaiUI-Regular.ttf NotoSansTibetan-Regular.ttf NotoSansTifinagh-Regular.ttf NotoSansUgaritic-Regular.ttf NotoSansVai-Regular.ttf \
	NotoSansYi-Regular.ttf sort.py


