
syntaxdir = $(datadir)/cooledit/fonts

syntax_DATA = sort.py 8x13B-ISO8859-1.pcf.gz 8x13B.pcf.gz NotoKufiArabic-Regular.ttf NotoLoopedLao-Regular.ttf NotoLoopedLaoUI-Regular.ttf \
        NotoMusic-Regular.ttf NotoNastaliqUrdu-Regular.ttf NotoSansAdlam-Regular.ttf NotoSansAnatolianHieroglyphs-Regular.ttf NotoSansArabic-Regular.ttf \
        NotoSansArmenian-Regular.ttf NotoSansAvestan-Regular.ttf NotoSansBalinese-Regular.ttf NotoSansBamum-Regular.ttf NotoSansBassaVah-Regular.ttf \
        NotoSansBatak-Regular.ttf NotoSansBengali-Regular.ttf NotoSansBhaiksuki-Regular.ttf NotoSansBrahmi-Regular.ttf NotoSansBuginese-Regular.ttf \
        NotoSansBuhid-Regular.ttf NotoSansCanadianAboriginal-Regular.ttf NotoSansCarian-Regular.ttf NotoSansCaucasianAlbanian-Regular.ttf NotoSansChakma-Regular.ttf \
        NotoSansCham-Regular.ttf NotoSansCherokee-Regular.ttf NotoSansChorasmian-Regular.ttf NotoSansCoptic-Regular.ttf NotoSansCuneiform-Regular.ttf \
        NotoSansCypriot-Regular.ttf NotoSansCyproMinoan-Regular.ttf NotoSansDeseret-Regular.ttf NotoSansDevanagari-Regular.ttf \
        NotoSansDuployan-Regular.ttf NotoSansEgyptianHieroglyphs-Regular.ttf NotoSansElbasan-Regular.ttf NotoSansElymaic-Regular.ttf NotoSansEthiopic-Regular.ttf \
        NotoSansGeorgian-Regular.ttf NotoSansGlagolitic-Regular.ttf NotoSansGothic-Regular.ttf NotoSansGrantha-Regular.ttf NotoSansGujarati-Regular.ttf \
        NotoSansGunjalaGondi-Regular.ttf NotoSansGurmukhi-Regular.ttf NotoSansHanifiRohingya-Regular.ttf NotoSansHanunoo-Regular.ttf NotoSansHatran-Regular.ttf \
        NotoSansHebrew-Regular.ttf NotoSansHK-Regular.otf NotoSansImperialAramaic-Regular.ttf NotoSansIndicSiyaqNumbers-Regular.ttf \
        NotoSansInscriptionalPahlavi-Regular.ttf NotoSansInscriptionalParthian-Regular.ttf NotoSansJavanese-Regular.ttf NotoSansJP-Regular.otf \
        NotoSansKaithi-Regular.ttf NotoSansKannada-Regular.ttf NotoSansKayahLi-Regular.ttf NotoSansKharoshthi-Regular.ttf NotoSansKhmer-Regular.ttf \
        NotoSansKhudawadi-Regular.ttf NotoSansKR-Regular.otf NotoSansLepcha-Regular.ttf NotoSansLimbu-Regular.ttf NotoSansLinearA-Regular.ttf \
        NotoSansLinearB-Regular.ttf NotoSansLisu-Regular.ttf NotoSansLycian-Regular.ttf NotoSansLydian-Regular.ttf NotoSansMahajani-Regular.ttf \
        NotoSansMalayalam-Regular.ttf NotoSansMandaic-Regular.ttf NotoSansManichaean-Regular.ttf NotoSansMarchen-Regular.ttf NotoSansMasaramGondi-Regular.ttf \
        NotoSansMath-Regular.ttf NotoSansMedefaidrin-Regular.ttf NotoSansMeeteiMayek-Regular.ttf NotoSansMendeKikakui-Regular.ttf NotoSansMeroitic-Regular.ttf \
        NotoSansMiao-Regular.ttf NotoSansModi-Regular.ttf NotoSansMongolian-Regular.ttf NotoSansMono-Regular.ttf NotoSansMro-Regular.ttf NotoSansMultani-Regular.ttf \
        NotoSansMyanmar-Regular.ttf NotoSansNabataean-Regular.ttf NotoSansNandinagari-Regular.ttf NotoSansNewa-Regular.ttf \
        NotoSansNewTaiLue-Regular.ttf NotoSansNKo-Regular.ttf NotoSansNushu-Regular.ttf NotoSansOgham-Regular.ttf NotoSansOlChiki-Regular.ttf \
        NotoSansOldHungarian-Regular.ttf NotoSansOldItalic-Regular.ttf NotoSansOldNorthArabian-Regular.ttf NotoSansOldPermic-Regular.ttf NotoSansOldPersian-Regular.ttf \
        NotoSansOldSogdian-Regular.ttf NotoSansOldSouthArabian-Regular.ttf NotoSansOldTurkic-Regular.ttf NotoSansOriya-Regular.ttf NotoSansOsage-Regular.ttf \
        NotoSansOsmanya-Regular.ttf NotoSansPahawhHmong-Regular.ttf NotoSansPalmyrene-Regular.ttf NotoSansPauCinHau-Regular.ttf NotoSansPhagsPa-Regular.ttf \
        NotoSansPhoenician-Regular.ttf NotoSansPsalterPahlavi-Regular.ttf NotoSans-Regular.ttf NotoSansRejang-Regular.ttf NotoSansRunic-Regular.ttf \
        NotoSansSamaritan-Regular.ttf NotoSansSaurashtra-Regular.ttf NotoSansSC-Regular.otf NotoSansSharada-Regular.ttf NotoSansShavian-Regular.ttf \
        NotoSansSiddham-Regular.ttf NotoSansSignWriting-Regular.ttf NotoSansSinhala-Regular.ttf NotoSansSogdian-Regular.ttf NotoSansSoraSompeng-Regular.ttf \
        NotoSansSoyombo-Regular.ttf NotoSansSundanese-Regular.ttf NotoSansSylotiNagri-Regular.ttf NotoSansSymbols2-Regular.ttf NotoSansSymbols-Regular.ttf \
        NotoSansSyriac-Regular.ttf NotoSansTagalog-Regular.ttf NotoSansTagbanwa-Regular.ttf NotoSansTaiLe-Regular.ttf NotoSansTaiTham-Regular.ttf \
        NotoSansTaiViet-Regular.ttf NotoSansTakri-Regular.ttf NotoSansTamil-Regular.ttf NotoSansTamilSupplement-Regular.ttf NotoSansTangsa-Regular.ttf \
        NotoSansTC-Regular.otf NotoSansTelugu-Regular.ttf NotoSansThaana-Regular.ttf NotoSerifTibetan-Regular.ttf NotoSansTifinagh-Regular.ttf \
        NotoSansTirhuta-Regular.ttf NotoSansUgaritic-Regular.ttf NotoSansVai-Regular.ttf NotoSansVithkuqi-Regular.ttf NotoSansWancho-Regular.ttf \
        NotoSansWarangCiti-Regular.ttf NotoSansYi-Regular.ttf NotoSansZanabazarSquare-Regular.ttf NotoSerifAhom-Regular.ttf NotoSerifDivesAkuru-Regular.ttf \
        NotoSerifDogra-Regular.ttf NotoSerifKhojki-Regular.ttf NotoSerifMakasar-Regular.ttf NotoSerifNyiakengPuachueHmong-Regular.ttf NotoSerifOldUyghur-Regular.ttf \
        NotoSerifTangut-Regular.ttf NotoSerifToto-Regular.ttf NotoSerifYezidi-Regular.ttf NotoTraditionalNushu-Regular.ttf \
        NotoColorEmoji.ttf
