
pixmapdir = $(datadir)/coolicon

#pixmap_DATA = browse.xpm cooledit.xpm coolicon.config dynamite.xpm e.data launch.xpm \
#	manual.xpm mc.xpm netscape.xpm nscape.xpm phonedown.xpm phoneup.xpm printer.xpm \
#	spanner.xpm xterm.xpm xv.xpm cdrom_eject.xpm cdrom_view.xpm gmc.xpm lyx.xpm

pixmap_DATA = 
