
syntaxdir = $(datadir)/cooledit/syntax

syntax_DATA = c.syntax changelog.syntax diff.syntax html.syntax \
	java.syntax js.syntax latex.syntax lsm.syntax makefile.syntax ml.syntax \
	nroff.syntax pascal.syntax perl.syntax python.syntax sh.syntax \
	smalltalk.syntax texinfo.syntax unknown.syntax swig.syntax mail.syntax \
	ada95.syntax fortran.syntax mudela.syntax php.syntax mhtml.syntax \
	bapc.syntax jasm.syntax lua.syntax prolog.syntax sql.syntax css.syntax \
	xml.syntax scm.syntax lsm4.syntax





