
syntaxdir = $(datadir)/cooledit/syntax

syntax_DATA = \
	ada95.syntax aspx.syntax assembler.syntax as.syntax awk.syntax cabal.syntax changelog.syntax cmake.syntax cobol.syntax css.syntax cs.syntax c.syntax cuda.syntax \
	cxx.syntax cython.syntax debian-changelog.syntax debian-control.syntax debian-description.syntax debian-sources-list.syntax diff.syntax dlink.syntax dos.syntax \
	dot.syntax d.syntax ebuild.syntax eiffel.syntax erlang.syntax f90.syntax filehighlight.syntax fortran.syntax glsl.syntax go.syntax haskell.syntax hive.syntax \
	html.syntax idl.syntax ini.syntax jal.syntax java.syntax json.syntax js.syntax j.syntax kotlin.syntax latex.syntax lisp.syntax lkr.syntax lsm.syntax lua.syntax \
	m4.syntax mail.syntax makefile.syntax markdown.syntax meson.syntax ml.syntax named.syntax nemerle.syntax nroff.syntax octave.syntax opencl.syntax osl.syntax \
	pascal.syntax perl.syntax php.syntax PKGBUILD.syntax po.syntax povray.syntax privoxy.syntax procmail.syntax properties.syntax protobuf.syntax puppet.syntax \
	python.syntax r.syntax ruby.syntax rust.syntax sh.syntax slang.syntax smalltalk.syntax spec.syntax spice.syntax sql.syntax strace.syntax swift.syntax \
	swig.syntax syntax.syntax tcl.syntax texinfo.syntax ts.syntax tt.syntax unknown.syntax verilog.syntax vhdl.syntax xml.syntax yabasic.syntax yaml.syntax \
	yum-repo.syntax yxx.syntax bapc.syntax jasm.syntax lsm4.syntax mhtml.syntax mudela.syntax php3.syntax prolog.syntax scm.syntax cdoc.syntax

